--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,6 @@
     },
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "types": ["vite-plugin-svg-icons/client"]
 }
