--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-svg-icons": "^2.0.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
