--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+    "@rollup/rollup-linux-x64-gnu": "4.6.1",
+    "@esbuild/linux-x64": "0.20.0"
   }
 }
