--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.9.2",
     "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.1",
     "zustand": "^4.5.0"
