fix: rollup runtime issue

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "optionalDependencies": {
+    "@rollup/rollup-darwin-arm64": "4.9.6",
     "@rollup/rollup-linux-x64-gnu": "4.6.1",
     "@esbuild/linux-x64": "0.20.0"
   }
