feat: forgot password

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.50.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.1",
+    "sweetalert2": "^11.10.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
